Draft 4: Fixed button alignment, fixed file name display, fixed shadow overlay, changed color of completed step, added alert feature

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ code {
 #steps .MuiStepConnector-vertical {
   padding: 0
 }
+
+#completedStep .MuiStepIcon-root.MuiStepIcon-completed {
+  color: green;
+}
